# flask

./: .dockerignore  .env  .env_extra  .gitignore  Dockerfile  README.md  database.py  docker-compose.debug.yml  docker-compose.yml  models.py  pyproject.toml  requirements.txt  wait-for-postgres.sh  wsgi.py
instance/: config.py  demidov.sqlite
migrations/: alembic.ini  env.py
migrations/versions/: 2023.01.03-20h10m41s__6f1fa0c29095_.py  2023.01.04-00h18m49s__afea0749e04e_.py  2023.01.14-23h32m38s__b9296da9fc41_.py  2023.01.15-00h26m36s__9d292789b732_.py  2023.01.15-01h14m17s__c943f35dc11d_.py  2023.01.20-19h03m12s__7dcf82a521ef_.py  8a2f44117898_init.py  bddc4eacdd48_.py  df9668ba2a42_.py
project/: __init__.py  admin.py  app.py  app_factory.py  commands.py  database.py  forms.py  logger.py  models.py  permissions.py  serializers.py  shell.py  shemas.py  shemas_mapping.py
project/apiapp/: api.py  place_api.py  product_api.py  trip_api.py  truck_api.py  users_api.py
project/authapp/: views.py
project/extensions/: __init__.py  login_manager.py  security.py
project/templates/: base.html  index.html
project/templates/admin/: index.html
project/templates/authapp/: login.html  profile.html  register.html
project/templates/macro/: pagination.html  pretty_field.html
project/templates/truck/: truck_list.html
project/templates/truckapp/: trip_create.html  trip_list.html  truck_detail.html  truck_list.html
project/truck/: views.py
project/truckapp/: views.py
project/user/: views.py
project/userapp/: views.py
project/utils/: plural_word.py
(+3 files in other folders)
